--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=8088
-MONGO_URL=mongodb+srv://ramesh:ramesh@cluster0.engpu.mongodb.net/shop-app-db?retryWrites=true&w=majority
+
+MONGO_URL=mongodb+srv://ramesh:ramesh@cluster0.gr728o1.mongodb.net/blog-app-db?retryWrites=true&w=majority
 JWT_SECRET=heytherewecantleaveyou1234567897568
