--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.33.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "express-fileupload": "^1.4.0",
+    "formidable": "^2.1.1",
     "http": "^0.0.1-security",
     "http-errors": "^2.0.0",
     "joi": "^17.6.0",
